# rostelecom_test

./: .env  .test.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py  mock_service_a.py  rabbitmq.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/cpe/: endpoints.py  schemas.py
stub_service/: stub_service.py
tests/: conftest.py  mock_service_a.py
tests/integration_tests/: test_api.py
